<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Backgroundcolor"
    tools:context=".Intro1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rounded_shpae"
        android:layout_width="275dp"
        android:layout_height="420dp"
        android:background="@drawable/rounded_shape_intro"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="172dp"
            android:layout_height="172dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/secondintro"
            app:layout_constraintEnd_toStartOf="@+id/rounded_shpae"
            app:layout_constraintStart_toEndOf="@+id/rounded_shpae"
            app:layout_constraintTop_toTopOf="@+id/rounded_shpae" />

        <TextView
            android:id="@+id/intro1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/online_shopping"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/introtext2"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro1_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:background="@color/Backgroundcolor"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="15dp"
        android:background="@color/Backgroundcolor"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>